Add missing paint invalidation when creating canvas 2d context with no alpha

BUG=647903

Review-Url: https://codereview.chromium.org/2558973002
Cr-Commit-Position: refs/heads/master@{#437143}

Former-commit-id: d9b157453d029d17966766dfcf7564fbc03d7c6e